--- a/Advent2019/Advent2019/Advent2019.fsproj
+++ b/Advent2019/Advent2019/Advent2019.fsproj
@@ -9,7 +9,10 @@
 
     <ItemGroup>
         <Compile Include="Input.fs" />
+        <Compile Include="Computer.fs" />
         <Compile Include="Day1.fs" />
+        <Compile Include="Day2.fs" />
+        <Compile Include="Day3.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
